header component added and database model modified

--- a/frontend/src/app/features/main/main.component.html
+++ b/frontend/src/app/features/main/main.component.html
@@ -1,7 +1,10 @@
-<p>
-  main works!
-</p>
+<div class="container">
+  <app-header [data]="cityData"></app-header>
 
-<button [disabled]="loading" (click)="onLogout()" class="btn btn-primary">
-  Kilépés
-</button>
+  <button (click)="onLogout()" class="btn btn-primary">
+    Kilépés
+  </button>
+
+
+</div>
+
