--- a/frontend/src/app/features/header/header/header.component.html
+++ b/frontend/src/app/features/header/header/header.component.html
@@ -1,7 +1,14 @@
 <div class="container">
 
-  <p>{{ round }} .kör, {{ round }} .hely, lezercapa: {{ lezercapa }}, rohamfoka: {{ rohamfoka }}, csatacsiko: {{ csatacsiko }},
-    pearl: {{ cityData['value']['pearl'] }}, coral: {{ cityData.coral }}, aramlasiranyito: {{ aramlasiranyito }}, zatonyvar: {{ zatonyvar }},
+  <p>{{ round }} .kör,
+    {{ cityData['value']['rank'] }} .hely,
+    lezercapa: {{ lezercapa }},
+    rohamfoka: {{ rohamfoka }},
+    csatacsiko: {{ csatacsiko }},
+    pearl: {{ cityData['value']['pearl'] }},
+    coral: {{ cityData.coral }},
+    aramlasiranyito: {{ aramlasiranyito }},
+    zatonyvar: {{ zatonyvar }},
   </p>
 
 
