--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
-body {
+* {
   margin: 0;
   padding: 0;
+}
+
+body {
+  background-image: url("./assets/undersea_game-08.png");
+  background-repeat: no-repeat;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
